[package]
name = "managertomuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
# kalosm = "0.2.1"
poise = "0.6.1"
regex = "1.10.4"
strsim = "0.11.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "full"] }
# zstd-sys = "=2.0.9"

# [patch.crates-io]
# esaxx-rs = {path = "./esaxx-rs"}